Remove need for no-print class.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <article itemscope itemtype="http://schema.org/BlogPosting">
 
-<p class="no-print aspirational">Aspirational</p>
+<p class="aspirational">Aspirational</p>
 
 <div class="abstract">
   <p class="title">Protocol.Club</p>
