Make it actually valid HTML5.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!doctype html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="robots" content="index,follow" />
-  <meta name="creator" content="Mike English" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="robots" content="index,follow">
+  <meta name="author" content="Mike English">
 
-  <meta property="og:description" content="A website exploring learning opportunities provided by implmentation of standarized protocols. A place for curious minds to explore and experiment, to educate and be educated about protocols and implementations old and new alike." />
+  <meta property="og:description" content="A website exploring learning opportunities provided by implmentation of standarized protocols. A place for curious minds to explore and experiment, to educate and be educated about protocols and implementations old and new alike.">
 
-  <link rel="icon" href="/images/protocolclub.png" type="image/png" />
-  <link rel="shortcut icon" href="/images/protocolclub.png" type="image/png" />
+  <link rel="icon" href="/images/protocolclub.png" type="image/png">
+  <link rel="shortcut icon" href="/images/protocolclub.png" type="image/png">
   <title>protocol.club</title>
 
-  <link rel="stylesheet" href="./site.css" />
+  <link rel="stylesheet" href="./site.css">
 
 </head>
 
